force-app/main/default/objects/Product_Proposal__c/Product_Proposal__c.object-meta.xml
<CustomObject>
    <description>Proposta comercial vinculada a uma Opportunity, com controle de status, desconto e geração de resumo por IA.</description>
    <label>Product Proposal</label>
    <nameField>
        <label>Proposal Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>