force-app/main/default/objects/Product_Proposal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Proposals</relationshipLabel>
    <relationshipName>Product_Proposals_Account</relationshipName>
    <type>Lookup</type>
</CustomField>