force-app/main/default/objects/Product_Proposal__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Product Proposals</relationshipLabel>
    <relationshipName>Approved_Product_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>