force-app/main/default/objects/Product_Proposal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Proposals</relationshipLabel>
    <relationshipName>Product_Proposals_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>