force-app/main/default/objects/Product_Proposal__c/fields/Final_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_Value__c</fullName>
    <formula>Total_Value__c * (1 - Discount_Percentage__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>