force-app/main/default/objects/Product_Proposal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Proposals</relationshipLabel>
    <relationshipName>Product_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>