force-app/main/default/objects/Product_Proposal__c/fields/Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Notes__c</fullName>
    <label>Proposal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>