force-app/main/default/objects/Product_Proposal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Enviada</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>