force-app/main/default/objects/Product_Proposal__c/validationRules/Max_Discount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Discount_Validation</fullName>
    <active>true</active>
    <description>Desconto acima de 50% exige aprovação — bloqueia status diferente de Rascunho se desconto ultrapassar o limite.</description>
    <errorConditionFormula>Discount_Percentage__c > 50 &amp;&amp; NOT(ISPICKVAL(Status__c, 'Rascunho'))</errorConditionFormula>
    <errorMessage>Desconto acima de 50% requer aprovação gerencial. Mantenha o status como Rascunho até obter aprovação.</errorMessage>
</ValidationRule>